webapp/tasks/python/misspelled-keyword/python-errors.txt
  File "main.py", line 5
    elseif(age < 30): print("keep working hard")
    ^^^^^^^^^^^^^^^^
SyntaxError: illegal target for annotation
